<resources>
    <string name="app_name">SeoulTechTeams</string>
    <string name="developer_id_number">13109378</string>
    <string name="developer_name">정호섭</string>
    <string name="title_login">로그인</string>
    <string name="input_email">이메일</string>
    <string name="input_password">패스워드</string>
    <string name="input_password_confirm">패스워드 확인</string>
    <string name="btn_text_signup">아직 회원이 아니신가요? 가입하기</string>
    <string name="btn_text_login">로그인</string>
    <string name="title_signup">회원가입</string>
    <string name="btn_next">다음</string>
    <string name="input_username">사용자명</string>
    <string name="btn_start">시작하기</string>
    <string name="title_member_list">멤버 목록</string>
    <string name="user_email">bongsik@gmail.com</string>
    <string name="btn_invite">초대하기</string>
    <string name="ask_if_invite">초대하시겠습니까?</string>
    <string name="yes_invite">예</string>
    <string name="no_invite">아니오</string>
    <string name="title_todo_list">할 일 목록</string>
    <string name="d_day_countdown">D-10</string>
    <string name="todo_list">할 일 목록</string>
    <string name="add_todo">추가</string>
    <string name="todo_start_date">20.01.01 10:10 PM</string>
    <string name="todo_end_date">20.01.10 6:10 PM까지</string>
    <string name="create_team_title">팀 생성</string>
    <string name="edit_team_name">팀 이름을 지어주세요</string>
    <string name="edit_team_desc">멋진 우리 팀을 소개해주세요</string>
    <string name="finish_create_team">완료</string>
    <string name="detail_team_title">팀의 정보</string>
    <string name="ask_if_delete">삭제하시겠습니까?</string>
    <string name="yes_delete">예</string>
    <string name="no_delete">아니오</string>
    <string name="create_todo">해야할 일을 작성해 주세요</string>
    <string name="submit_todo">제출</string>
    <string name="dismiss_todo">반려</string>
    <string name="approve_todo">승인</string>
    <string name="member_add_todo_title">할 일 추가</string>
    <string name="edit_member_add_todo_title">해야 할 일을 요약해서 작성해주세요</string>
    <string name="edit_member_add_todo_desc">나의 할 일을 자세히 메모해보세요</string>
    <string name="finish">완료</string>
    <string name="todo_d_day">D-Day</string>
    <string name="set_title_manager">담당자</string>
    <string name="manager_name">김봉식</string>
    <string name="detail_todo_title">해야 할 일</string>
    <string name="edit_todo_title">제목을 입력해주세요</string>
    <string name="edit_todo_desc">나의 할 일을 자세히 메모해보세요</string>
    <string name="title_comment">Comment</string>
    <string name="edit_comment">Comment</string>
    <string name="my_todo_list_title">나의 할 일</string>
    <string name="title_tab_now_my_todo_list">진행중</string>
    <string name="title_tab_completed_my_todo_list">완료됨</string>
    <string name="btn_change_profile">프로필 수정</string>
    <string name="tv_notification">알림</string>
    <string name="title_about_us">앱의 정보</string>
    <string name="title_version">버전</string>
    <string name="version">2.0</string>
    <string name="title_copyright">저작권</string>
    <string name="copyright">Copyright © 2024 AppZiggy\n\nPowered by Seoultech Software</string>
    <string name="title_image_open_source">이미지</string>
    <string name="item01_image_open_source">flaticon</string>
    <string name="item02_image_open_source">Unsplash</string>
    <string name="title_open_source">오픈소스</string>
    <string name="item01_open_source">Google Material Design</string>
    <string name="item02_open_source">Firebase</string>
    <string name="item03_open_source">bumptech/glide (GitHub)</string>
    <string name="item04_open_source">wdullaer:materialdatetimepicker (GitHub)</string>
    <string name="title_change_profile">프로필 수정</string>
    <string name="edit_username">사용자 이름</string>
    <string name="tv_change_pwd">패스워드 변경</string>
    <string name="edit_pwd">패스워드</string>
    <string name="edit_pwd_confirm">패스워드 확인</string>
    <string name="title_setting">설정</string>
    <string name="subtitle_general_setting">일반</string>
    <string name="item_notice">공지사항</string>
    <string name="item_font">폰트</string>
    <string name="item_theme">테마</string>
    <string name="subtitle_notification_setting">알림</string>
    <string name="item_push_notification">푸시 알림 받기</string>
    <string name="subtitle_data_management_setting">데이터 관리</string>
    <string name="item_delete_cache">캐시 데이터 삭제</string>
    <string name="subtitle_others">기타</string>
    <string name="item_inquiry">문의하기</string>
    <string name="item_review">리뷰하기</string>
    <string name="item_open_source">오픈소스 라이센스</string>
    <string name="title_notice_list">공지사항</string>
    <string name="date_notice_item">날짜</string>
    <string name="title_notice_item">제목</string>
    <string name="title_participation">팀 참여도</string>
    <string name="todo_faithful_ranking_title">성실도 랭킹</string>
    <string name="first_rank">1위</string>
    <string name="second_rank">2위</string>
    <string name="third_rank">3위</string>
    <string name="fourth_rank">4위</string>
    <string name="rank_percent">90%</string>
    <string name="first_rank_member_name">1등맨</string>
    <string name="second_rank_member_name">2등맨</string>
    <string name="third_rank_member_name">3등맨</string>
    <string name="fourth_rank_member_name">4등맨</string>
    <string name="late_king">우리팀 지연왕</string>
    <string name="late_king_name">지연왕 이름</string>
    <string name="our_hero">우리팀 영웅</string>
    <string name="our_hero_name">영웅 이름</string>
    <string name="forever_late">영원한 삼수생</string>
    <string name="forever_late_name">삼수생 이름</string>
    <string name="future_lawyer">미래의 변호사</string>
    <string name="future_lawyer_name">변호사 이름</string>
    <string name="about_leader">팀장에 대한 어떤 것</string>
    <string name="loading">잠시만 기다려주세요.</string>
    <string name="dummy_text">
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate
    </string>
    <string name="first_notice_desc">안녕하세요. SeoultechTeams 오신 것을 환영합니다!</string>
    <string-array name="title_array">
        <item>팀 목록</item>
        <item>내 할 일 목록</item>
        <item>나의 정보</item>
    </string-array>
    <string name="modify">수정하기</string>
    <string name="delete">삭제하기</string>
    <string name="state_doing">진행중</string>
    <string name="btn_state_submit_late">지연제출</string>
    <string name="btn_state_submit">제출</string>
    <string name="state_submitted">제출됨</string>
    <string name="btn_state_waiting">대기중</string>
    <string name="btn_state_confirm">승인</string>
    <string name="state_confirmed">승인됨</string>
    <string name="btn_state_dismiss">반려</string>
    <string name="state_dismissed">반려됨</string>
    <string name="btn_state_resubmit">다시 제출</string>
    <string name="state_protested">이의제기됨</string>
    <string name="splash_error_title">비정상 오류</string>
    <string name="splash_error_quit">종료</string>
    <string name="splash_error_message">error</string>
    <string name="empty_email">이메일을 입력해주세요</string>
    <string name="empty_password">패스워드를 입력해주세요</string>
    <string name="invalid_email_form">이메일 양식을 확인해주세요</string>
    <string name="invalid_password_length">비밀번호는 6자리 이상입니다</string>
    <string name="incorrect_password">입력한 패스워드와 다릅니다</string>
    <string name="empty_user_name">사용자명을 입력해주세요</string>
    <string name="percent_template">%d%</string>
    <string name="item_drop_out">탈퇴하기</string>
    <string name="create_first_team">첫 번째 팀을 생성해보세요.</string>
    <string name="add_first_todo">첫 번째 할 일을 생성해보세요.</string>
    <string name="no_todo_found">나의 할 일이 없어요.</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="service_policy">서비스 이용약관</string>
    <string name="privacy_policy_detail">
        \'SeoultechTeams\'는 개인정보보호법에 따라 이용자들의 개인정보 보호 및 권익을 보호하고자 다음과 같은 처리방침을 두고 있습니다.
        \n
당사는 개인정보 처리방침을 개정하는 경우 앱 화면 및 웹사이트 공지사항을 통하여 공지할 것입니다.


        \n\n
1. 개인정보의 처리 목적 :

당사에서 개인정보를 별도로 저장하거나 이용하지 않습니다.


        \n\n
2. 개인정보 파일 현황
당사는 별도의 개인정보 파일을 사용하지 않으며 저장하지도 않습니다.

당사는 쿠키를 저장하지 않으며 이용하지 않습니다.

이용자가 이에 대해 의문이 있다면 해당 서비스(애플 및, 각 광고 미디어)로 직접 연락해야 합니다.


        \n\n
3.  개인정보의 처리 및 보유기간
당사는 개인정보를 직접적으로 저장하거나 보유하지 않습니다.

따라서 당사는 이용자의 개인정보를 처리하는 내용도 보유기간도 없습니다.


        \n\n
4. 개인정보의 제3자 제공에 관한 사항

당사는 개인정보를 제3자에게 제공하지 않고 있습니다.


        \n\n
5. 개인정보 처리 위탁

당사는 개인정보를 위탁하고 있지 않습니다.


        \n\n
6. 정보 주체의 권리, 의무 및 그 행사 방법

이용자는 개인정보 주체로서 권리 행사할 수 있습니다.
        \n
1) 개인정보 열람 요구
        \n
2) 오류 등이 있을 경우 정정 요구
        \n
3) 삭제 요구
        \n
4) 처리 정지 요구
        \n
당사는 개인정보를 저장하거나 위탁하지 않습니다.


        \n\n
7. 개인정보의 파기

당사의 애플리케이션은 독립 실행 방식의 애플리케이션으로 별도의 서버를 사용하지 않고 있습니다.

또한 개인정보를 저장하지 않으므로 파기할 것이 없습니다.

그러나 사용자가 원할 경우 애플리케이션을 \'삭제\'함으로서 모든 데이터를 파기할 수 있습니다.

        \n\n
8. 개인정보 보호책임자 작성

본 개인정보 처리정책에 대해 궁금하신 사항이 있거나, 개인정보 처리 절차에 대한 질문, 의견 또는 우려가 있을 경우 아래 연락처로 연락 주시기 바랍니다.
        \n\n
이메일 : chs8275@gmail.com
    </string>
</resources>