<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title_image_open_source"
        android:text="@string/title_image_open_source"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_item01_image_open_source"
        android:text="@string/item01_image_open_source"
        android:textColor="@color/black"
        android:textSize="@dimen/body_text_size"
        android:layout_marginTop="7dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_item02_image_open_source"
        android:text="@string/item02_image_open_source"
        android:textColor="@color/black"
        android:textSize="@dimen/body_text_size"
        android:layout_marginTop="7dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title_open_source"
        android:text="@string/title_open_source"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_item01_open_source"
        android:text="@string/item01_open_source"
        android:textColor="@color/black"
        android:textSize="@dimen/body_text_size"
        android:layout_marginTop="7dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_item02_open_source"
        android:text="@string/item02_open_source"
        android:textColor="@color/black"
        android:textSize="@dimen/body_text_size"
        android:layout_marginTop="7dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_item03_open_source"
        android:text="@string/item03_open_source"
        android:textColor="@color/black"
        android:textSize="@dimen/body_text_size"
        android:layout_marginTop="7dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_item04_open_source"
        android:text="@string/item04_open_source"
        android:textColor="@color/black"
        android:textSize="@dimen/body_text_size"
        android:layout_marginTop="7dp"
        android:layout_marginStart="20dp" />

</LinearLayout>